
[RubyVM::AbstractSyntaxTree]

  [New methods]

    * RubyVM::AbstractSyntaxTree.parse parses a given string and returns AST
      nodes. [experimental]

    * RubyVM::AbstractSyntaxTree.parse_file parses a given file and returns AST
      nodes.  [experimental]

    * RubyVM::AbstractSyntaxTree.of returns AST nodes of the given proc or method.
      [experimental]

[String]

  [New features]

    * String#split yields each substring to the block if given. [Feature #4780]

[Struct]

  [Modified methods]

    * Struct#to_h now maps keys and values to new keys and values
      by the block if given.  [Feature #15143]

  [Aliased method]

    * Struct#filter is a new alias for Struct#select [Feature #13784]

[Time]

  [New features]

    * Time.new and Time#getlocal accept a timezone object as well as
      UTC offset string. Time#+, Time#- and Time#succ also preserve
      the timezone.  [Feature #14850]

[TracePoint]

  [New methods]

    * TracePoint#parameters [Feature #14694]

=== Stdlib updates (outstanding ones only)

[Bundler]

  * Add Bundler to Standard Library. [Feature #12733]

  * Use 1.17.1. It's latest stable version.

[Coverage]

  A oneshot_lines mode is added.  [Feature #15022]
  This mode checks "whether each line was executed at least once or not",
  instead of "how many times each line was executed".
  A hook for each line is fired at most once, and after it is fired
  the hook flag is removed, i.e., it runs with zero overhead.

  [New options]

    * Add +:oneshot_lines+ keyword argument to Coverage.start.

    * Add +:stop+ and +:clear+ keyword arguments to Coverage.result.
      If +clear+ is true, it clears the counters to zero.
      If +stop+ is true, it disables coverage measurement.

  [New methods]

    * Coverage.line_stub, which is a simple helper function that
      creates the "stub" of line coverage from a given source code.

[ERB]

  [New options]

    * Add +:trim_mode+ and +:eoutvar+ keyword arguments to ERB.new.